Build out initial rough list prototype

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -7,6 +7,6 @@
     <title>Git Jet ✈️</title>
   </head>
   <body>
-    <script src="./renderer.js"></script>
+    <script type="module" src="./dist.js"></script>
   </body>
 </html>
