Implement BlameList with CodeMirror

--- a/src/renderer/blame/index.html
+++ b/src/renderer/blame/index.html
@@ -6,6 +6,8 @@
     <link href="../common.css" rel="stylesheet">
     <link href="./styles.css" rel="stylesheet">
     <title>Git Jet ✈️</title>
+    <link href="../fonts/RecursiveMonoLnrSt-Regular.woff2" rel="stylesheet">
+    <link href="../fonts/RecursiveSansLnrSt-Regular.woff2" rel="stylesheet">
   </head>
   <body>
     <script type="module" src="./index.tsx"></script>
